--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Niamble</title>
+    <link rel="icon" href="https://www.nytimes.com/games-assets/v2/metadata/wordle-apple-touch-icon.png?v="/>
     <style>
         * {
             margin: 0;
